[package]
name = "trdperson_rapier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[dependencies]
bevy = { version = "0.11.2", features = ["dynamic_linking"] }
bevy_third_person_camera = "0.1.5"
bevy_rapier3d = { version = "0.22", features = [ "simd-stable", "debug-render-3d", "parallel" ] }
